# poorman-rag

./: .gitignore  AGENT.md  Dockerfile.build  Makefile  README.md  config.example.yaml  go.mod  go.sum  serverless.yml
cmd/embedding/: main.go
cmd/lambda/: main.go
cmd/mcp/: main.go
cmd/stdio/: main.go
docs/: config.md  deploy.md  indexer.md  mcp.md
indexer/: check_schema.py  config.example.yaml  config.yaml.example  main.py  pyproject.toml  requirements.txt
indexer/core/: cfg.py  chunker.py  datasource.py  deduplicator.py  embedder.py  pipeline.py  s3.py  search.py  storage.py
indexer/core/datasources/: example.py
indexer/scripts/: compare_embeddings.py  export_onnx.py  test_mcp.py
internal/api/embedding/: adapter.go  handler.go  handler_test.go
internal/api/mcp/: handler.go  handler_test.go
internal/app/: app.go
internal/config/: config.go
internal/domain/: embedding.go  embedding_test.go  mcp.go  mcp_test.go
internal/domain/embedding/: models.go  models_test.go
internal/domain/mcp/: models.go  models_test.go
internal/embedding/: openai.go
internal/embedding/e5/: embedder.go
internal/embedding/gemma/: embedder.go
internal/embedding/onnx/: generic.go
internal/embedding_service/: service.go
internal/infrastructure/embedding/: embedder.go  embedder_test.go  loader.go  loader_test.go
internal/infrastructure/search/: lancedb.go
internal/mcp/: handler.go  model.go
internal/search/: manager.go  search.go
internal/services/embedding/: service.go  service_test.go
internal/utils/: downloader.go  utils.go
lib/include/: usearch.h
(+7 files in other folders)
